<resources>
    <string name="app_name">SaveLife</string>

    <!--Onboarding-->
    <string name="str_boarding_heading_type_one">Heading 1</string>
    <string name="str_boarding_heading_type_two">Heading 2</string>
    <string name="str_boarding_heading_type_three">Heading 3</string>

    <string name="str_boarding_footer_type_one">Footer 1</string>
    <string name="str_boarding_footer_type_two">Footer 2</string>
    <string name="str_boarding_footer_type_three">Footer 3</string>
    <string name="str_inivitation_for">invited you to SAVE LIFE</string>


    <!--Login-->
    <string name="str_progress_login_title">Logging In</string>
    <string name="str_progress_wait">Please wait</string>


    <!--Complete profile-->
    <string name="str_blood_group">Blood Group</string>
    <string name="str_contact_num">Mobile number</string>
    <string name="str_city">City</string>
    <string name="str_ext">Ext</string>
    <string name="str_complete_profile">Complete Profile</string>
    <string name="err_blood_group">Please select blood group</string>
    <string name="err_mob_num">Please provide valid mobile number</string>
    <string name="err_city">Please provide city name</string>
    <string name="str_complete_profile_msg">Please complete your profile</string>
    <string name="str_update_profile">Updating profile</string>
    <string name="str_country">Country</string>
    <string name="err_country">Please select the country</string>

    <!--Country-->
    <string name="str_search">Search for country</string>
    <string name="fab_behavior">com.donate.savelife.component.FabBehavior</string>
    <string name="str_empty_country">No country found</string>
    <string name="str_choose_city">Choose a City</string>
    <string name="str_no_city_found">No city match</string>

    <!--Home-->
    <string name="str_requirement_tab">Needs</string>
    <string name="str_heros_tab">Heroes</string>
    <string name="str_preference_tab">Preference</string>
    <string name="str_i_am_donor">I Am a Donor</string>
    <string name="str_my_request">My Requests</string>

    <!--Post request-->
    <string name="str_address">Street address</string>
    <string name="err_address">Please provide the valid address</string>
    <string name="str_request">Request</string>
    <string name="str_post_request">Posting the request</string>
    <string name="str_request_heading">Please provide the information</string>

    <!--Needs-->
    <string name="str_blood_required_msg">%1$s blood required on urgent basis</string>
    <string name="str_needs_empty_state">No active requests available..</string>
    <string name="str_save_life">Save a life</string>
    <string name="str_send_invite">Send invite</string>
    <string name="str_check_out_app">Check out Save a Life!\n%s</string>
    <string name="str_need_success_msg">Request successfully posted</string>

    <!--App invite-->
    <string name="dynamicLinkDomain">https://u8qcq.app.goo.gl/jTpt</string>
    <string name="deepLinkBaseUrl">https://savealife.com</string>

    <!--Profile-->
    <string name="str_wat_blood_group">%1s blood group donor</string>
    <string name="str_profile_info">Basic Information</string>
    <string name="str_wat_address" formatted="false">%1s,%2s</string>
    <string name="str_msg1">Saved</string>
    <string name="str_edit">Edit</string>
    <string name="str_lives">Lives</string>

    <!--Perferences-->
    <string name="str_reminder_settings">Reminder setting</string>
    <string name="str_pop_notification">Request notifications</string>
    <string name="str_general_settings">General</string>
    <string name="str_about_us">About us</string>
    <string name="str_invite">Invite friends and family</string>

    <!--About Us-->
    <string name="str_about_app">lsvfhjdhfjhjvhdf dhvljdhfjlvhldfv dflvldfhlvfd vdfkjvkdfvjdf fhvjlhdfjhvdf dvkdfvdfv ljdfvjhfdjh dfjvjdfhvjfhdvjfd</string>
    <string name="str_rate_us">Rate us on Play Store</string>
    <string name="str_terms_conditions">Terms and Conditions</string>
    <string name="str_version">"Version "</string>
    <string name="str_about">About Us</string>
    <string name="str_log_out">Logout</string>

    <!--Terms & Condition-->
    <string name="str_terms_content">sdhjshdjhsjhshdjdsh sdjlhjsdhjsd dsjlhjlsdhjds dsjlhljsdh \n sdsdhshllsdhj
    dsbjdbsbds sjdbjsbdjb sdjbjdsbsd sdjjbdc jdbjbds sdjbcjsbdc dsjbcdjsbc dsbcjdb \n
    dshhdshc dschvdsuhudsvhdvs sdvihdhvs vsdidsvh sdviohvdishvds svdhdvshdvs dvshsvdh</string>


    <!--Intro slider-->
    <string name="str_title1">Be a Blood Donor</string>
    <string name="str_description1">Extend hands, Let together craft a better world</string>
    <string name="str_title2">No worries</string>
    <string name="str_description2">Real life heroes are out there, Let seek for help</string>
    <string name="str_title3">Connect</string>
    <string name="str_description3">Be a part of Noble cause, Sign in</string>
    <string name="str_complete_on_boarding">Please complete the on-boarding</string>

    <!--Chat-->
    <string name="str_chat_empty_state">Say something..!</string>
    <string name="str_write_msg">Write message</string>

    <!--Heros-->
    <string name="str_heros_empty_state">Heroes will rise..</string>
    <string name="action_honor">Honor</string>
    <string name="str_honor_hero_heading">Every Blood Donor is a HERO</string>
    <string name="str_honor_hero_sub_heading">Please take some time and HONOR them</string>
    <string name="str_honor_hero_thanks">You have honored all the heroes\nThank you </string>

    <!--Launcher-->
    <string name="str_app_deprecated_msg">Version is deprecated ,please update</string>
    <string name="str_app_error_msg">Something went wrong, please try again</string>
    <string name="str_btn_try_again_txt">TRY AGAIN</string>
    <string name="str_btn_update_txt">UPDATE NOW</string>

    <!--Click Action-->
    <string name="str_action_chat">android.intent.action.CHAT</string>
    <string name="str_action_profile">android.intent.action.PROFILE</string>

    <!--Welcome-->
    <string name="str_proceed">Proceed</string>

</resources>