<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/complete_profile_back_drop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMargin="45dp"
            app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/profile_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/blood_banner" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        app:behavior_overlapTop="45dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/flexible.example.cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/dimen_4"
                app:cardElevation="@dimen/dimen_4"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/dimen_16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.donate.savelife.component.text.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingBottom="@dimen/dimen_10"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingRight="@dimen/dimen_16"
                        android:paddingTop="@dimen/dimen_10"
                        android:text="@string/str_request_heading"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/font_16"
                        app:fontTypeface="museosans700" />

                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/blood_group_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_16"
                        android:layout_marginRight="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_10"
                        app:ms_alignLabels="true"
                        app:ms_arrowColor="@android:color/darker_gray"
                        app:ms_arrowSize="@dimen/dimen_16"
                        app:ms_baseColor="@android:color/darker_gray"
                        app:ms_enableFloatingLabel="true"
                        app:ms_floatingLabelColor="?attr/colorPrimary"
                        app:ms_floatingLabelText="@string/str_blood_group"
                        app:ms_highlightColor="?attr/colorPrimary"
                        app:ms_hint="@string/str_blood_group"
                        app:ms_hintColor="@android:color/darker_gray"
                        app:ms_multiline="false"
                        app:ms_thickness="@dimen/dimen_0.5" />

                    <com.donate.savelife.component.text.TextView
                        android:id="@+id/err_blood_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingRight="@dimen/dimen_16"
                        android:text="@string/err_blood_group"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/font_12"
                        android:visibility="gone"
                        app:fontTypeface="museosans500"
                        tools:text="Please select blood group" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10"
                        app:theme="@style/AppTheme.TextInputLayout">

                        <com.donate.savelife.component.text.EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:hint="@string/str_address"
                            android:inputType="textMultiLine"
                            android:minLines="3"
                            android:scrollbars="vertical"
                            android:textSize="@dimen/font_16"
                            app:fontTypeface="museosans500" />
                    </android.support.design.widget.TextInputLayout>

                    <com.donate.savelife.component.text.TextView
                        android:id="@+id/err_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingRight="@dimen/dimen_16"
                        android:text="@string/err_address"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/font_12"
                        android:visibility="gone"
                        app:fontTypeface="museosans500"
                        tools:text="Please provide city name" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10"
                        app:theme="@style/AppTheme.TextInputLayout">

                        <com.donate.savelife.component.text.EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/str_city"
                            android:inputType="textNoSuggestions"
                            android:textSize="@dimen/font_16"
                            app:fontTypeface="museosans500" />
                    </android.support.design.widget.TextInputLayout>

                    <com.donate.savelife.component.text.TextView
                        android:id="@+id/err_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingRight="@dimen/dimen_16"
                        android:text="@string/err_city"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/font_12"
                        android:visibility="gone"
                        app:fontTypeface="museosans500"
                        tools:text="Please provide city name" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10"
                        app:theme="@style/AppTheme.TextInputLayout">

                        <com.donate.savelife.component.text.EditText
                            android:id="@+id/country_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/str_country"
                            android:inputType="textNoSuggestions"
                            android:textSize="@dimen/font_16"
                            app:fontTypeface="museosans500" />
                    </android.support.design.widget.TextInputLayout>

                    <com.donate.savelife.component.text.TextView
                        android:id="@+id/err_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingRight="@dimen/dimen_16"
                        android:text="@string/err_country"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/font_12"
                        android:visibility="gone"
                        app:fontTypeface="museosans500"
                        tools:text="Please select the country" />


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_request"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/dimen_16"
                        android:layout_marginLeft="@dimen/dimen_16"
                        android:layout_marginRight="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_16"
                        android:background="@drawable/selector_primary"
                        android:gravity="center"
                        android:minHeight="@dimen/dimen_48"
                        android:text="@string/str_request"
                        android:textColor="@color/material_white"
                        android:textSize="@dimen/font_16" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</merge>