<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/complete_profile_back_drop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginBottom="45dp"
            app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/profile_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        app:behavior_overlapTop="45dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/dimen_16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.donate.savelife.component.text.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingBottom="@dimen/dimen_10"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingRight="@dimen/dimen_16"
                        android:paddingTop="@dimen/dimen_10"
                        android:text="@string/str_complete_profile_msg"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/font_16"
                        app:fontTypeface="museosans700" />

                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/blood_group_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_16"
                        android:layout_marginRight="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_10"
                        app:ms_alignLabels="true"
                        app:ms_arrowColor="@android:color/darker_gray"
                        app:ms_arrowSize="@dimen/dimen_16"
                        app:ms_baseColor="@android:color/darker_gray"
                        app:ms_enableFloatingLabel="true"
                        app:ms_floatingLabelColor="@color/material_login_background"
                        app:ms_floatingLabelText="@string/str_blood_group"
                        app:ms_highlightColor="@color/material_login_background"
                        app:ms_hint="@string/str_blood_group"
                        app:ms_hintColor="@android:color/darker_gray"
                        app:ms_multiline="false"
                        app:ms_thickness="@dimen/dimen_0.5" />

                    <com.donate.savelife.component.text.TextView
                        android:id="@+id/err_blood_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingRight="@dimen/dimen_16"
                        android:text="@string/err_blood_group"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/font_12"
                        android:visibility="gone"
                        app:fontTypeface="museosans500"
                        tools:text="Please select blood group" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/country"
                            android:layout_width="@dimen/dimen_100"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10"
                            app:theme="@style/AppTheme.TextInputLayout">

                            <com.donate.savelife.component.text.EditText
                                android:id="@+id/country_et"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_ext"
                                android:inputType="textNoSuggestions"
                                android:textSize="@dimen/font_16"
                                app:fontTypeface="museosans500" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/mobile_num"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:layout_toRightOf="@id/country"
                            android:layout_weight="1"
                            app:theme="@style/AppTheme.TextInputLayout">

                            <com.donate.savelife.component.text.EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_contact_num"
                                android:inputType="textNoSuggestions"
                                android:textSize="@dimen/font_16"
                                app:fontTypeface="museosans500" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <com.donate.savelife.component.text.TextView
                        android:id="@+id/err_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingRight="@dimen/dimen_16"
                        android:text="@string/err_mob_num"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/font_12"
                        android:visibility="gone"
                        app:fontTypeface="museosans500"
                        tools:text="Please provide valid mobile num" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10"
                        app:theme="@style/AppTheme.TextInputLayout">

                        <com.donate.savelife.component.text.EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/str_city"
                            android:inputType="textNoSuggestions"
                            android:textSize="@dimen/font_16"
                            app:fontTypeface="museosans500" />
                    </android.support.design.widget.TextInputLayout>

                    <com.donate.savelife.component.text.TextView
                        android:id="@+id/err_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dimen_16"
                        android:paddingRight="@dimen/dimen_16"
                        android:text="@string/err_city"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/font_12"
                        android:visibility="gone"
                        app:fontTypeface="museosans500"
                        tools:text="Please provide city name" />


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_complete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/dimen_16"
                        android:layout_marginLeft="@dimen/dimen_16"
                        android:layout_marginRight="@dimen/dimen_16"
                        android:layout_marginTop="@dimen/dimen_16"
                        android:background="@drawable/selector_green"
                        android:gravity="center"
                        android:minHeight="@dimen/dimen_48"
                        android:text="@string/str_complete_profile"
                        android:textColor="@color/material_login_login_color"
                        android:textSize="@dimen/font_16" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</merge>